--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/contracts/lib/ds-test"]
 	path = packages/contracts/lib/ds-test
 	url = https://github.com/dapphub/ds-test
+[submodule "packages/contracts-forge/lib/ds-test"]
+	path = packages/contracts-forge/lib/ds-test
+	url = https://github.com/dapphub/ds-test
