--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web3-scaffold/contracts",
+  "name": "@prompty/contracts",
   "private": true,
   "engines": {
     "node": ">=14 <16"
