add minor styling and loop through

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,13 +15,16 @@
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/contracts": "^5.5.0",
     "@ethersproject/providers": "^5.5.0",
-    "@web3-scaffold/contracts": "workspace:*",
+    "@gimmixorg/use-wallet": "^0.0.31",
+    "@prompty/contracts": "workspace:*",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.1",
     "debug": "^4.3.3",
     "graphql": "^16.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ens-name": "^0.2.5",
     "urql": "^2.0.6",
     "web3modal": "^1.9.5",
     "zustand": "^3.6.7"
