--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ens-name": "^0.2.5",
+    "react-markdown": "^8.0.3",
     "urql": "^2.0.6",
     "web3modal": "^1.9.5",
     "zustand": "^3.6.7"
