--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,12 +20,14 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
     "debug": "^4.3.3",
+    "ethers": "^5.5.2",
     "graphql": "^16.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ens-name": "^0.2.5",
     "react-markdown": "^8.0.3",
+    "react-textarea-autosize": "^8.3.3",
     "urql": "^2.0.6",
     "web3modal": "^1.9.5",
     "zustand": "^3.6.7"
