+rainbowkit, +build fix, -useWallet

--- a/packages/app/.env
+++ b/packages/app/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_ETHEREUM_RPC_ENDPOINT=
 NEXT_PUBLIC_POLYGON_RPC_ENDPOINT=https://polygon-mumbai.infura.io/v3/9e55ae7e1685411abf37e7e1af924d22
 NEXT_PUBLIC_RINKEBY_RPC_ENDPOINT=https://rinkeby.infura.io/v3/9e55ae7e1685411abf37e7e1af924d22
+NEXT_PUBLIC_RINKEBY_RPC_INFURA_ID=9e55ae7e1685411abf37e7e1af924d22
