--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,12 +15,12 @@
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/contracts": "^5.5.0",
     "@ethersproject/providers": "^5.5.0",
-    "@gimmixorg/use-wallet": "^0.0.31",
     "@prompty/contracts": "workspace:*",
+    "@rainbow-me/rainbowkit": "^0.1.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
     "debug": "^4.3.3",
-    "ethers": "^5.5.2",
+    "ethers": "^5.6.4",
     "graphql": "^16.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -29,10 +29,12 @@
     "react-markdown": "^8.0.3",
     "react-textarea-autosize": "^8.3.3",
     "urql": "^2.0.6",
+    "wagmi": "^0.4.2",
     "web3modal": "^1.9.5",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.5.0",
     "@graphql-codegen/cli": "^2.3.1",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-operations": "^2.2.2",
@@ -41,6 +43,7 @@
     "@types/debug": "^4.1.7",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
+    "abi": "link:@types/@ethersproject/abi",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.5",
