--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^8.0.3",
     "react-textarea-autosize": "^8.3.3",
     "urql": "^2.0.6",
+    "use-elapsed-time": "^3.0.4",
     "wagmi": "^0.4.2",
     "web3modal": "^1.9.5",
     "zustand": "^3.6.7"
