--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-compound-slider": "^3.4.0",
     "react-dom": "17.0.2",
     "react-ens-name": "^0.2.5",
     "react-markdown": "^8.0.3",
