Sliders, character limit ux, es lint settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,8 @@
     "node": true
   },
   "rules": {
-    "import/first": "error",
-    "import/newline-after-import": "error",
-    "import/no-duplicates": "error"
+    "import/first": "warn",
+    "import/newline-after-import": "warn",
+    "import/no-duplicates": "warn"
   }
 }
