--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
     "debug": "^4.3.3",
     "ethers": "^5.6.4",
     "graphql": "^16.2.0",
+    "javascript-time-ago": "^2.5.6",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-compound-slider": "^3.4.0",
@@ -29,6 +30,7 @@
     "react-ens-name": "^0.2.5",
     "react-markdown": "^8.0.3",
     "react-textarea-autosize": "^8.3.3",
+    "react-time-ago": "^7.2.1",
     "urql": "^2.0.6",
     "use-elapsed-time": "^3.0.4",
     "wagmi": "^0.4.2",
