--- a/packages/app/codegen.yml
+++ b/packages/app/codegen.yml
@@ -9,6 +9,6 @@ generates:
     config:
       gqlImport: urql#gql
       immutableTypes: true
-hooks:
-  afterAllFileWrite:
-    - eslint --fix
+# hooks:
+#   afterAllFileWrite:
+#     - eslint --fix
