--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,7 +5,7 @@
     "node": ">=14 <16"
   },
   "scripts": {
-    "dev": "next dev & graphql-codegen --watch",
+    "dev": "next dev & graphql-codegen",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
