--- a/packages/subgraph/subgraph-matic.yaml
+++ b/packages/subgraph/subgraph-matic.yaml
@@ -25,6 +25,6 @@ dataSources:
           handler: handlePromptResponse
         - event: ResponderAdded(uint256,address)
           handler: handleResponderAdded
-        - event: InstanceCreated(uint256,string)
+        - event: InstanceCreated(uint256,string,string)
           handler: handleInstanceCreated
       file: ./src/mapping.ts
